[build-system]
requires = [ "setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']
include = '(\.pyi?$|src|tests)'

[tool.mypy]
disable_error_code = 'attr-defined,import,union-attr'
