[build-system]
requires = [ "setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = 'py38'

[tool.ruff.lint]
ignore = ["E203", "E266", "E501", "F403", "F401"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
