[metadata]
name = mail-devel
version = attr: mail_devel.VERSION
author = Florian Kantelberg
author_email = florian.kantelberg@mailbox.org
description = IMAP and SMTP in memory test server
long_description = file: README.md
license = MIT
keywords = imap smtp development
url = https://github.com/fkantelberg/mail-devel
classifiers =
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3

[options]
include_package_data = True
package_dir =
  =src
packages = find:
python_requires = >=3.7
install_requires =
  aiohttp-jinja2
  aiosmtpd
  pymap

[options.package_data]
* = src/mail_devel/resources/*

[options.entry_points]
console_scripts =
    mail_devel = mail_devel.__main__:main

[options.packages.find]
where = src
